--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <main>
         <article>
             <h2>Título 1</h2>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem esse ipsam, accusantium qui optio ea illum quibusdam repellat nisi ipsum! Totam aperiam provident, rem repellat sint dolores eaque asperiores assumenda.</p>
+            <p>COnteúdo 1</p>
         </article>
         <article>
             <h2>Título 2</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus tenetur, id aliquid eveniet molestiae illum libero architecto deserunt, ex minima rem vero ea cum praesentium, iusto qui quasi nam adipisci?</p>
+            <p>Conteúdo 2</p>
         </article>
     </main>
 </body>
