--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
     <main>
         <article>
             <h2>Título 1</h2>
-            <p>COnteúdo 1</p>
+            <p>Conteúdo 1</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, est amet id cupiditate molestias, quisquam eligendi voluptates in, omnis quidem non quis porro iure temporibus vero fuga molestiae. Dolor, unde?</p>
         </article>
         <article>
             <h2>Título 2</h2>
             <p>Conteúdo 2</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam facilis ad ratione enim repudiandae animi necessitatibus libero illo, architecto blanditiis! Dolor modi quasi temporibus. Sapiente accusamus molestias minus porro maxime.</p>
         </article>
     </main>
 </body>
